--- a/css/lj.css
+++ b/css/lj.css
@@ -1,58 +1,249 @@
+body {
+  background-color: #f6f6f6;
+}
 
-img {
-    width: 1300px;
-  }
+.nb {
+  padding-top: 0.1px;
+  height: 130px;
+  background-color: white;
+}
 
-  .lj0 {
-    display: block;
-    width: 1380px;
-    height: 2000px;
-    margin: 0 auto;
-  }
+.lj1 img {
+  width: 1190px;
+}
 
-  .lj1 {
-    margin-top: 10px;
-    width: 1200px;
-  }
+.lj0 {
+  display: block;
+  width: 1380px;
+  margin: 0 auto
+}
 
-  .lj1 {
-    display: block;
-  }
+.lj0::after {
+  content: '';
+  display: block;
+  clear: both;
+}
 
-  .lj2 {
-    display: block;
-    margin: 10px;
-    background-color: white;
-    width: 150px;
-  }
+.lj1 {
+  margin-top: 20px;
+  width: 1200px;
+}
 
-  /* .lj0 .nonefix {
-    float: none;
-  } */
+.lj1 {
+  display: block;
+}
 
-  .lj3 {
-    display: block;
-    font-size: 25px;
-  }
+.lj2 {
+  display: block;
+  margin: 10px;
+  margin-top: 20px;
+  background-color: white;
+  width: 150px;
+}
 
-  .lj2 li {
-    padding: 25px;
-    text-align: center;
-  }
+.lj3 {
+  display: block;
+  font-size: 25px;
+}
 
-  .lj2 li:hover {
-    color: aqua;
-    list-style: circle;
-  }
+.lj2 li {
+  padding: 25px;
+  text-align: center;
+}
 
-  .sp-size img {
-    width: 100px;
-  }
+.lj2 li:hover {
+  color: aqua;
+  list-style: circle;
+}
 
-  .lj4 {
-    display: block;
-    margin: 10px;
-    width: 150px;
-    height: 124px;
-    background-color: white;
-  }
+.sp-all {
+  position: relative;
+  bottom: 20px;
+  color: #b6b6b6;
+}
+
+.sp-imgsize {
+  display: block;
+  width: 698px;
+  height: 200px;
+}
+
+.sp-imgsize img {
+  width: 195px;
+}
+
+.lj4 {
+  margin: 10px;
+  margin-top: 20px;
+  padding: 10px;
+  display: block;
+  width: 1190px;
+  height: 470px;
+  background-color: white;
+}
+
+.lj4 ul {
+  margin-top: 10px;
+  height: 200px;
+  border: 1px, solid, #b6b6b650;
+}
+
+.lj4 li {
+  border-width: 0 1px 0 0;
+  border-style: solid;
+  border-color: #b6b6b650;
+}
+
+.sp-name {
+  padding: 80px 0 0 0;
+  width: 270px;
+  font-size: 20px;
+  overflow: hidden;
+  /*超出部分隐藏*/
+  white-space: nowrap;
+  /*禁止换行*/
+  text-overflow: ellipsis;
+  /*省略号*/
+}
+
+.sp-size {
+  font-size: 14px;
+  color: #b6b6b6;
+}
+
+.sp-zt {
+  position: relative;
+  bottom: 50px;
+  right: 120px;
+  color: #e05e30;
+}
+
+.sp-imgsize .wuliu {
+  position: relative;
+  right: 62px;
+  bottom: 20px;
+  ;
+  color: #b6b6b6;
+}
+
+.sp-price {
+  font-size: 20px;
+  text-align: center;
+  height: 200px;
+  width: 265px;
+}
+
+.sp-zprice {
+  margin-top: 50px;
+  color: #d54633;
+}
+
+.lj4 .sp-xq {
+  border: 0;
+  height: 190px;
+  width: 200px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.sp-fk {
+  height: 30px;
+  width: 120px;
+  margin-top: 50px;
+  margin-left: 40px;
+  background-color: #27ba9b;
+}
+
+.sp-fk a {
+  color: white;
+}
+
+.lj5 {
+  width: 1190px;
+  margin: 10px;
+  padding: 10px;
+  display: block;
+  background-color: white;
+}
+
+.jg {
+  font-size: 28px;
+  color: #ba3e2d;
+}
+
+.lj5 ul {
+  border: 1px, solid, #b6b6b650;
+  border-width: 1px 0 0 0;
+  margin-top: 10px;
+  height: 450px;
+}
+
+.lj5 ul li {
+  margin: 60px 25px 20px 25px;
+}
+
+.lj5 ul img {
+  width: 242px;
+}
+
+.lj6 {
+  width: 1190px;
+  margin: 10px;
+  padding: 10px;
+  display: block;
+  background-color: white;
+}
+
+
+.lj6 ul {
+  border: 1px, solid, #b6b6b650;
+  border-width: 1px 0 0 0;
+  margin-top: 10px;
+  height: 450px;
+}
+
+.lj6 ul li {
+  margin: 60px 25px 20px 25px;
+}
+
+.lj6 ul img {
+  width: 242px;
+}
+
+/* 列表项默认隐藏删除按钮 */
+#a1,
+#a2,
+#a3,
+#a4,
+#a5,
+#a6,
+#a7,
+#a8 {
+  position: relative;
+}
+
+.delete-item {
+  position: absolute;
+  top: 1px;
+  left: 225px;
+  display: none;
+}
+
+/* 当鼠标悬停在列表项上时显示删除按钮 */
+li:hover .delete-item {
+  display: inline-block;
+  background-color: #b6b6b6;
+  border-radius: 12px;
+  border: none;
+  color: red;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 5px;
+}
+
+.delete-item:hover {
+  color: darkred;
+}
+footer {
+  background-color: white;
+}
