--- a/css/index.css
+++ b/css/index.css
@@ -1,36 +1,65 @@
-.bangzhu{display: none;}
-.bangzhu p{height: 30px;line-height: 30px;}
-.bangzhu p:hover{color: white;background-color: #39bfa3;}
-div li:hover .bangzhu{display: block;}
-.bangzhu1{position: relative;}
-.bangzhu{position: absolute;}
-.bangzhu2{width: 180px;}
-
-div.xtx{
-    background-color:rgb(243, 243, 243);
+.bangzhu {
+    display: none;
 }
-div.xtx1{
+
+.bangzhu p {
+    height: 30px;
+    line-height: 30px;
+}
+
+.bangzhu p:hover {
+    color: white;
+    background-color: #39bfa3;
+}
+
+div li:hover .bangzhu {
+    display: block;
+}
+
+.bangzhu1 {
+    position: relative;
+}
+
+.bangzhu {
+    position: absolute;
+}
+
+.bangzhu2 {
+    width: 180px;
+}
+
+div.xtx {
+    background-color: rgb(243, 243, 243);
+}
+
+div.xtx1 {
     width: 1240px;
     margin: 0 auto;
     position: relative;
 }
-.xtx1 ul li .xtx2{
-    /* transition: margin-left 2s; */
-    transition: all 2s cubic-bezier(0,1,0,0.9) 0s;
-}
-.xtx1 ul li .xtx2:hover{
-    /* margin-left: 10px; */
-    transform: translate(10px,0);
-    background-color:rgba(60,179,113,0.2);
-}
-.xtx1 li:hover{background-color: rgba(60,179,113,0.8);}
 
-.xtx1 li{
-    background-color: rgba(0,0,0,0.5);
+.xtx1 ul li .xtx2 {
+    /* transition: margin-left 2s; */
+    transition: all 2s cubic-bezier(0, 1, 0, 0.9) 0s;
+}
+
+.xtx1 ul li .xtx2:hover {
+    /* margin-left: 10px; */
+    transform: translate(10px, 0);
+    background-color: rgba(60, 179, 113, 0.2);
+}
+
+.xtx1 li:hover {
+    background-color: rgba(60, 179, 113, 0.8);
+}
+
+.xtx1 li {
+    background-color: rgba(0, 0, 0, 0.5);
     width: 240px;
     position: relative;
 }
-div .xtx1 li .xtx2{
+
+div .xtx1 li .xtx2 {
     display: block;
     height: 50px;
     line-height: 50px;
@@ -38,46 +67,62 @@ div .xtx1 li .xtx2{
     color: white;
     padding: 0 30px;
 }
+
 /*盒子*/
-.xg{
+.xg {
     float: left;
     width: 400px;
     position: absolute;
     left: 240px;
     top: 0;
-    z-index:2;
+    z-index: 2;
     box-sizing: border-box;
     display: none;
-    background-color: rgba(255, 255, 255,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
 }
-.xg1{width: 400px;}
-.xg .xg1 li{width: 100px;float: left;height: 50px;background-color: transparent;/*取消背景颜色*/}
-.xg1 li a{
+
+.xg1 {
+    width: 400px;
+}
+
+.xg .xg1 li {
+    width: 100px;
+    float: left;
+    height: 50px;
+    background-color: transparent;
+    /*取消背景颜色*/
+}
+
+.xg1 li a {
     display: block;
     text-align: center;
     height: 50px;
     line-height: 50px;
     background-color: rgba(255, 255, 255, 0.1);
 }
-.xg1 li a:hover{
+
+.xg1 li a:hover {
     color: white;
     background-color: #39bfa3;
 }
-.xtx .xtx1 li:hover .xg{
+
+.xtx .xtx1 li:hover .xg {
     display: block;
 }
+
 /*盒子*/
-.xtx3{
+.xtx3 {
     width: 1000px;
     height: 500px;
     margin: 1rem auto;
     overflow: hidden;
-    z-index:1;
+    z-index: 1;
     /* position: relative; */
     position: absolute;
     top: -16px;
     left: 240px;
 }
+
 .xtx3 .xtx4 {
     width: 5000px;
     height: 500px;
@@ -85,96 +130,120 @@ div .xtx1 li .xtx2{
     display: flex;
     animation: run 15s ease infinite;
 }
-.xtx4 li{
+
+.xtx4 li {
     flex: 0 0 auto;
     width: 1000px;
 }
-.xtx4 li a,.xtx4 li img{
+
+.xtx4 li a,
+.xtx4 li img {
     display: block;
     width: 1000px;
     height: 500px;
 }
+
 /*动画关键帧*/
-@keyframes run{
-    0%,10%{
+@keyframes run {
+
+    0%,
+    10% {
         transform: translateX(0);
     }
-    20%,30%{
+
+    20%,
+    30% {
         transform: translateX(-1000px);
     }
-    40%,50%{
+
+    40%,
+    50% {
         transform: translateX(-2000px);
     }
-    60%,70%{
+
+    60%,
+    70% {
         transform: translateX(-3000px);
     }
-    80%,90%{
+
+    80%,
+    90% {
         transform: translateX(-4000px);
     }
-    100%{
+
+    100% {
         transform: translateX(0);
     }
 }
 
 
 
-.xtx5{
+.xtx5 {
     width: 1240px;
     height: 500px;
     padding-top: 30px;
     margin: 0 auto;
 }
-.xtx6{
+
+.xtx6 {
     width: 1240px;
     height: 100px;
     float: left;
 }
-.xtx6 a{
+
+.xtx6 a {
     float: right;
     color: rgba(0, 0, 0, 0.3);
 }
-.xtx6 a:hover{
+
+.xtx6 a:hover {
     color: #39bfa3;
 }
-.xtx6 p{
+
+.xtx6 p {
     font-size: 30px;
     font-weight: 2000px;
     height: 50px;
     line-height: 100px;
 }
-.xtx6 p span{
+
+.xtx6 p span {
     font-size: 15px;
     color: rgba(0, 0, 0, 0.5);
     margin-left: 30px;
 }
 
 
-.xtx7 a img{
+.xtx7 a img {
     width: 305px;
     height: 305px;
     margin-right: 5px;
 }
-.xtx7{
+
+.xtx7 {
     float: left;
     position: relative;
     transition: all 0.7s;
 }
-.xtx7 p{
+
+.xtx7 p {
     margin-right: 5px;
     width: 305px;
     text-align: center;
     font-size: 20px;
-    background-color: rgba(127,255,212,0.2);
+    background-color: rgba(127, 255, 212, 0.2);
 }
-.xtx7 div{
+
+.xtx7 div {
     padding-bottom: 10px;
     font-size: 20px;
     text-align: center;
     margin-right: 5px;
-    background-color: rgba(127,255,212,0.2);
-    color: rgba(255,64,64, 1);
+    background-color: rgba(127, 255, 212, 0.2);
+    color: rgba(255, 64, 64, 1);
 }
-.xtx7 .xtx8{
+
+.xtx7 .xtx8 {
     position: absolute;
     bottom: 300px;
     left: 20px;
@@ -187,7 +256,7 @@ div .xtx1 li .xtx2{
 }
 
 /*广告标签*/
-aside{
+aside {
     width: 40px;
     height: 40px;
     padding-top: 8PX;
@@ -197,121 +266,155 @@ aside{
     text-align: center;
     font-size: 50px;
     margin-right: 20px;
-    top: 600px;/* 距离顶部距离 */
-    transform: translateY(10vh);/*距离原位置距离*/
+    top: 600px;
+    /* 距离顶部距离 */
+    transform: translateY(10vh);
+    /*距离原位置距离*/
     border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 40px;
 }
-aside a{
+
+aside a {
     display: block;
     height: 40px;
     color: #39bfa3;
     line-height: 40px;
 }
-aside a:hover{color: white;}
-aside:hover{background-color: #39bfa3;}
 
-.xtx9{
-    float: left;
-    transition: all 0.7s;/*过度效果时间*/
+aside a:hover {
+    color: white;
 }
-.xtx9 a img{
+
+aside:hover {
+    background-color: #39bfa3;
+}
+
+.xtx9 {
+    float: left;
+    transition: all 0.7s;
+    /*过度效果时间*/
+}
+
+.xtx9 a img {
     width: 305px;
     height: 305px;
     margin-right: 5px;
 }
-.xtx9 p{
+
+.xtx9 p {
     margin-right: 5px;
     width: 305px;
     text-align: center;
     font-size: 22px;
-    background-color: rgba(255,255,255,1);
+    background-color: rgba(255, 255, 255, 1);
 }
-.xtx9 div{
+
+.xtx9 div {
     padding-bottom: 15px;
     text-align: center;
     margin-right: 5px;
     font-size: 15px;
-    background-color: rgba(255,255,255,1);
-    color: rgba(0,0,0, 0.5);
+    background-color: rgba(255, 255, 255, 1);
+    color: rgba(0, 0, 0, 0.5);
 }
 
-div .xtx7:hover,div .xtx9:hover{
-    box-shadow: 0 0 5px rgba(0, 0, 0,0.7);/*阴影效果*/
-    transform: translate(0,-10px);/*上浮效果*/
-}/*图片效果*/
+div .xtx7:hover,
+div .xtx9:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    /*阴影效果*/
+    transform: translate(0, -10px);
+    /*上浮效果*/
+}
 
-.xtx10{
+/*图片效果*/
+
+.xtx10 {
     margin-top: 5px;
-    background-color:rgb(243, 243, 243);
+    background-color: rgb(243, 243, 243);
 }
-.xtx10 .xtx6 a{
+
+.xtx10 .xtx6 a {
     position: relative;
 }
-.xtx10 .xtx6 a div{
+
+.xtx10 .xtx6 a div {
     width: 20px;
     height: 20px;
     text-align: center;
     background-color: rgb(223, 223, 223);
 }
-.xtx10 .xtx6 a div:hover{background-color: #39bfa3;}
-.xtx10 .xtx6 a div.a2{
+
+.xtx10 .xtx6 a div:hover {
+    background-color: #39bfa3;
+}
+
+.xtx10 .xtx6 a div.a2 {
     position: absolute;
     left: -70px;
     top: -10px;
 }
-.xtx10 .xtx6 a div.a3{
+
+.xtx10 .xtx6 a div.a3 {
     position: absolute;
     left: -40px;
     top: -10px;
 }
-.xtx10 div .xtx11 img{
+
+.xtx10 div .xtx11 img {
     width: 240px;
     height: 306px;
 }
 
-.xtx12{
+.xtx12 {
     width: 1240px;
     height: 750px;
     padding-top: 30px;
     margin: 0 auto;
 }
-.xtx13 li{
+
+.xtx13 li {
     float: left;
 }
-.xtx13{
+
+.xtx13 {
     margin-left: 600px;
     margin-bottom: 10px;
 }
-.xtx13 li a{
+
+.xtx13 li a {
     display: block;
     width: 60px;
     height: 30px;
     text-align: center;
     line-height: 30px;
 }
-.xtx13 li a:hover{
+
+.xtx13 li a:hover {
     color: white;
     background-color: #39bfa3;
 }
 
-.xtx9.xtx14 img{
+.xtx9.xtx14 img {
     width: 240px;
     height: 620px;
 }
-.xtx7.xtx15 img{
+
+.xtx7.xtx15 img {
     width: 204px;
     height: 180px;
     margin-right: 0px;
 }
-.xtx7.xtx15{
+
+.xtx7.xtx15 {
     margin-left: 40px;
     margin-bottom: 20px;
 }
-.xtx7.xtx15 a{
+
+.xtx7.xtx15 a {
     position: relative;
 }
-.xtx7.xtx15 p{
+
+.xtx7.xtx15 p {
     text-align: left;
     width: 204px;
     padding: 0 15px;
@@ -319,12 +422,14 @@ div .xtx7:hover,div .xtx9:hover{
     font-size: 15px;
     margin-right: 0px;
 }
-.xtx7.xtx15 div{
+
+.xtx7.xtx15 div {
     text-align: left;
     background-color: white;
     padding: 0 15px;
     margin-right: 0px;
 }
+
 .xtx7.xtx15 .xtx16 {
     opacity: 0;
     height: 78px;
@@ -335,52 +440,60 @@ div .xtx7:hover,div .xtx9:hover{
     /* display: none; */
     transition: opacity 1s ease;
 }
- .xtx7.xtx15 .xtx16 p{
+
+.xtx7.xtx15 .xtx16 p {
     text-align: center;
     background-color: #39bfa3;
-    color: rgba(255,255,255,1);
-} 
-
-.xtx7.xtx15:hover{
-    box-shadow: 0 0 5px #39bfa3;
-    transform: translate(0,0);
+    color: rgba(255, 255, 255, 1);
 }
-div .xtx7.xtx15:hover .xtx16{
-    /* display: block; */
-     /* color: white; */
-     opacity: 1;
-} 
 
-#lj,#lj1{
+.xtx7.xtx15:hover {
+    box-shadow: 0 0 5px #39bfa3;
+    transform: translate(0, 0);
+}
+
+div .xtx7.xtx15:hover .xtx16 {
+    /* display: block; */
+    /* color: white; */
+    opacity: 1;
+}
+
+#lj,
+#lj1 {
     display: none;
 }
 
 
 /*结尾*/
-.xtx17{
+.xtx17 {
     height: 350px;
 }
-.xtx18{
+
+.xtx18 {
     width: 195px;
     height: 200px;
     margin-top: 100px;
     margin-left: 100px;
     float: left;
 }
-.xtx18 .a4{
+
+.xtx18 .a4 {
     text-align: center;
     padding: 20px 0;
-    color: rgba(0, 0, 0,0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
-.xtx18 img{
+
+.xtx18 img {
     width: 45px;
     padding-left: 15px;
 }
-.xtx18 div{
+
+.xtx18 div {
     width: 195px;
     margin: 0 auto;
 }
-.xtx18 a{
+
+.xtx18 a {
     float: left;
     width: 90px;
     line-height: 35px;
@@ -388,17 +501,21 @@ div .xtx7.xtx15:hover .xtx16{
     margin-left: 5px;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.xtx18 .a6{
+
+.xtx18 .a6 {
     text-align: center;
-    color: rgba(0, 0, 0,0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
-.xtx18 .a6:hover{
+
+.xtx18 .a6:hover {
     color: #39bfa3;
 }
-.a10 a{
+
+.a10 a {
     border: none;
 }
-.xtx18 .a7{
+
+.xtx18 .a7 {
     text-align: center;
     float: right;
     margin-right: -20px;
@@ -408,44 +525,57 @@ div .xtx7.xtx15:hover .xtx16{
     border: 1px solid #39bfa3;
     transition: all 0.7s;
 }
-.xtx18 .a7:hover{
+
+.xtx18 .a7:hover {
     color: #39bfa3;
     background-color: white;
 }
-.xtx18 .a8{
+
+.xtx18 .a8 {
     text-align: center;
-    color: rgba(0, 0, 0,0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
-.a9{width: 230px;}
-.a9 img{
-    width:120px;
+
+.a9 {
+    width: 230px;
+}
+
+.a9 img {
+    width: 120px;
     height: 120px;
     float: left;
     padding: 10px 10px;
     margin-left: 5px;
     margin-top: -10px;
 }
-.xtx18 .a9,.xtx18 .a10{
+
+.xtx18 .a9,
+.xtx18 .a10 {
     width: 230px;
 }
-.a11{
+
+.a11 {
     margin-right: 20px;
-    border-left:2px solid rgba(0, 0, 0, 0.1) ;
+    border-left: 2px solid rgba(0, 0, 0, 0.1);
 }
-.xtx19{
+
+.xtx19 {
     float: left;
     width: 380px;
     background-color: white;
     transition: all 0.7s;
     margin: 0 10px;
 }
-.xtx19 a{
+
+.xtx19 a {
     position: relative;
 }
-.xtx19 img{
+
+.xtx19 img {
     width: 380px;
 }
-.xtx19 .a13{
+
+.xtx19 .a13 {
     position: absolute;
     width: 380px;
     top: 85px;
@@ -453,9 +583,17 @@ div .xtx7.xtx15:hover .xtx16{
     padding-bottom: 17px;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.xtx19 p{color: white;}
-.xtx19 .a12{color: rgba(255, 255, 255, 0.7); font-size: 13px;}
-.xtx19 span{
+
+.xtx19 p {
+    color: white;
+}
+
+.xtx19 .a12 {
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 13px;
+}
+
+.xtx19 span {
     position: absolute;
     display: block;
     float: right;
@@ -468,85 +606,146 @@ div .xtx7.xtx15:hover .xtx16{
     transition: all 0.7s;
     border-radius: 35px;
 }
-.xtx20 p{float: left; color: black;padding: 10px 15px;}
-.xtx20 .a14{float: right;}
-.xtx19:hover{
-    box-shadow: 0 0 5px rgba(0, 0, 0,0.7);
-    transform: translate(0,-10px);
+
+.xtx20 p {
+    float: left;
+    color: black;
+    padding: 10px 15px;
 }
-.xtx19 span:hover{
+
+.xtx20 .a14 {
+    float: right;
+}
+
+.xtx19:hover {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    transform: translate(0, -10px);
+}
+
+.xtx19 span:hover {
     color: white;
     background-color: #39bfa3;
 }
-.xtx20 a:hover{
+
+.xtx20 a:hover {
     color: red;
 }
-.xtx21{background-color:rgb(243, 243, 243);}
-.xtx22{height: 400px;position: relative;}
-.a17{width: 200px; text-align: center; position: absolute;top: 40%;left: 900px;}
+
+.xtx21 {
+    background-color: rgb(243, 243, 243);
+}
+
+.xtx22 {
+    height: 400px;
+    position: relative;
+}
+
+.a17 {
+    width: 200px;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 900px;
+}
 
 /* 登录css */
-.dl{float: right;margin-top: 40px;}
-.dl a:hover{color: #39bfa3;}
+.dl {
+    float: right;
+    margin-top: 40px;
+}
 
-.dl1{
+.dl a:hover {
+    color: #39bfa3;
+}
+
+.dl1 {
     background-color: rgb(223, 223, 223);
 }
-.dl1 video{
-    display: block; 
+
+.dl1 video {
+    display: block;
     margin: 0 auto;
     width: 1636px;
 }
-.dl2{
+
+.dl2 {
     width: 1636px;
     margin: 0 auto;
     position: relative;
 }
-.dl3{
+
+.dl3 {
     width: 350px;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255, 255, 255, 0.3);
     position: absolute;
     top: 50%;
     left: 50%;
     margin-top: -200px;
     margin-left: -120px;
 }
-.dl3 span{
+
+.dl3 span {
     display: block;
     width: 70px;
     height: 50px;
     line-height: 50px;
     margin: 0 auto;
 }
-.dl4{margin-top: 15px;}
-.dl4 input{
+
+.dl4 {
+    margin-top: 15px;
+}
+
+.dl4 input {
     width: 250px;
     height: 40px;
     margin: 0 auto;
     display: block;
     background-color: rgba(255, 255, 255, 0.7)
 }
-.dl5{margin-left: 40px;margin-top: 15px;margin-bottom: 15px;font-size: 14px;}
-.dl5 a{color: rgb(0, 157, 255)}
-div button{
+
+.dl5 {
+    margin-left: 40px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    font-size: 14px;
+}
+
+.dl5 a {
+    color: rgb(0, 157, 255)
+}
+
+div .dl6 {
     cursor: pointer;
     width: 250px;
     height: 40px;
-    line-height:40px;
+    line-height: 40px;
     display: block;
     margin: 0 auto;
     color: white;
     background-color: #39bfa3;
     border: 1px solid #39bfa3;
 }
-.bd{float: left;margin: 15px 30px;}
-.bd1{float: right;margin: 15px 30px;}
-.bd:hover,.bd1:hover{color: #39bfa3;}
 
-.zc{
+.bd {
+    float: left;
+    margin: 15px 30px;
+}
+
+.bd1 {
+    float: right;
+    margin: 15px 30px;
+}
+
+.bd:hover,
+.bd1:hover {
+    color: #39bfa3;
+}
+
+.zc {
     width: 1050px;
     position: absolute;
     top: 100px;
     left: 250px;
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255, 255, 255, 0.3);
 }
